# sexRole_sexRatio

./: LICENSE  Long et al.R  README.md
c++/: CMakeLists.txt  LICENSE  evorole.sln  evorole.vcxproj  evorole.vcxproj.filters  femalecare0.001_malecare0.002.json  femalecare0.001_malecare0.002.sh  femalecare0.002_malecare0.001.json  femalecare0.002_malecare0.001.sh  mate0.002.json  mate0.002.sh  param.json  submit_example.sh  test.json  test.sh
c++/libs/: cmd_line.h  rndutils.hpp
c++/src/: CMakeLists.txt  evorole.cpp  evorole.h  json.cpp  json.h  main.cpp  recorder.cpp  recorder.h  simulation.cpp  simulation.h
